2006-07-14  Mario Torre  <neugens@limasoftware.net>

	* gnu/java/security/OID.java (OID): Private Constructor removed as
	it is not needed anymore.
	(clone): Fixed. Now uses super.clone instead of the private
	constructor as per specification of clone method.
	(serialVersionUID): added new field to allow serialization.

2006-07-13  Sven de Marothy  <sven@physto.se>

	* gnu/javax/imageio/gif/GIFImageReader.java
	(read): Remove old debugging trace.

2006-07-13  Andreas Tobler  <a.tobler@schweiz.ch>

	PR awt/28369:
	* gnu/java/awt/peer/gtk/CairoSurface.java (ColorModel): Swap red and
	blue mask.

2006-07-13  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(DEFAULT_MAX_SIZE): New static constant.
	(preferredSize): Return copy of the actual value computed
	by new helper method.
	(preferredSizeImpl): New helper method. Adds locking and
	correct handling of cached value.
	(minimumSize): Return copy of the actual value computed
	by new helper method.
	(minimumSizeImpl): New helper method. Adds locking and
	correct handling of cached value.
	(getMaximumSize):  Return copy of the actual value computed
	by new helper method.
	(maximumSizeImpl): New helper method. Adds locking and
	correct handling of cached value.
	(invalidate): Correct handling of cached layout information.
	Added locking.
	* java/awt/Container.java
	(preferredSize): Minimized locking. Corrected handling of cached
	values. Return copy of real value.
	(minimumSize): Minimized locking. Corrected handling of cached
	values. Return copy of real value.
	(getMaximumSize): Minimized locking. Corrected handling of cached
	values. Return copy of real value.
	
2006-07-13  Tania Bento  <tbento@redhat.com>

	* gnu/java/awt/peer/ClasspathFontPeer.java
	(isLogicalFontName): Return true if name == default.
	(logicalFontNameToFaceName): Check if name == default,
	and if so, return "Dialog.plain".
	(setStandardAttributes(String, Map)): If name == null, 
	it should be set to "Default", not "SansSerif".